use authority from database for OAuth2User